build_errors2.txt
   Compiling sabi v1.3.0 (C:\Users\bati-\OneDrive\Documents\AG-SysPro\src-tauri)
warning: unused import: `std::collections::HashMap`
 --> src\modules\system.rs:4:5
  |
4 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `read_reg_dword` and `version_is_newer`
  --> src\modules\system.rs:13:38
   |
13 | use crate::util::{hidden_powershell, read_reg_dword, version_is_newer};
   |                                      ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `sanitize_powershell_input`
  --> src\modules\performance.rs:12:38
   |
12 | use crate::util::{hidden_powershell, sanitize_powershell_input, scan_directory_size};
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::env`
 --> src\modules\network.rs:2:5
  |
2 | use std::env;
  |     ^^^^^^^^

error[E0499]: cannot borrow `manifest.items` as mutable more than once at a time
   --> src\modules\cleaner.rs:199:33
    |
157 |     let mut remove_dir_contents = |path: &str, exts: &[&str]| {
    |                                   --------------------------- first mutable borrow occurs here
...
169 |                                 manifest.items.push(crate::modules::rollback::RollbackItem {
    |                                 -------------- first borrow occurs due to use of `manifest.items` in closure
...
188 |             "temp_files" => { remove_dir_contents(&temp_dir, &[]); remove_dir_contents("C:\\Windows\\Temp", &[]); },
    |                               ------------------- first borrow later used here
...
199 |                                 manifest.items.push(crate::modules::rollback::RollbackItem {
    |                                 ^^^^^^^^^^^^^^ second mutable borrow occurs here

error[E0503]: cannot use `manifest.total_bytes` because it was mutably borrowed
   --> src\modules\cleaner.rs:206:33
    |
157 |     let mut remove_dir_contents = |path: &str, exts: &[&str]| {
    |                                   --------------------------- `manifest.total_bytes` is borrowed here
...
176 |                                 manifest.total_bytes += size;
    |                                 -------------------- borrow occurs due to use of `manifest.total_bytes` in closure
...
188 |             "temp_files" => { remove_dir_contents(&temp_dir, &[]); remove_dir_contents("C:\\Windows\\Temp", &[]); },
    |                               ------------------- borrow later used here
...
206 |                                 manifest.total_bytes += size;
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of borrowed `manifest.total_bytes`

error[E0503]: cannot use `files_removed` because it was mutably borrowed
   --> src\modules\cleaner.rs:207:33
    |
157 |     let mut remove_dir_contents = |path: &str, exts: &[&str]| {
    |                                   --------------------------- `files_removed` is borrowed here
...
177 |                                 files_removed += 1;
    |                                 ------------- borrow occurs due to use of `files_removed` in closure
...
188 |             "temp_files" => { remove_dir_contents(&temp_dir, &[]); remove_dir_contents("C:\\Windows\\Temp", &[]); },
    |                               ------------------- borrow later used here
...
207 |                                 files_removed += 1;
    |                                 ^^^^^^^^^^^^^^^^^^ use of borrowed `files_removed`

error[E0499]: cannot borrow `manifest.items` as mutable more than once at a time
   --> src\modules\privacy.rs:191:40
    |
178 |     let mut remove_file_safe = |path: String| {
    |                                -------------- first mutable borrow occurs here
...
181 |             manifest.items.push(crate::modules::rollback::RollbackItem {
    |             -------------- first borrow occurs due to use of `manifest.items` in closure
...
191 |     let mut remove_dir_contents_safe = |path: &str| {
    |                                        ^^^^^^^^^^^^ second mutable borrow occurs here
...
199 |                             manifest.items.push(crate::modules::rollback::RollbackItem {
    |                             -------------- second borrow occurs due to use of `manifest.items` in closure
...
216 |                 remove_file_safe(format!("{}\\History", chrome_dir));
    |                 ---------------- first borrow later used here

error[E0499]: cannot borrow `manifest.total_bytes` as mutable more than once at a time
   --> src\modules\privacy.rs:191:40
    |
178 |     let mut remove_file_safe = |path: String| {
    |                                -------------- first mutable borrow occurs here
...
185 |             manifest.total_bytes += size;
    |             -------------------- first borrow occurs due to use of `manifest.total_bytes` in closure
...
191 |     let mut remove_dir_contents_safe = |path: &str| {
    |                                        ^^^^^^^^^^^^ second mutable borrow occurs here
...
203 |                             manifest.total_bytes += size;
    |                             -------------------- second borrow occurs due to use of `manifest.total_bytes` in closure
...
216 |                 remove_file_safe(format!("{}\\History", chrome_dir));
    |                 ---------------- first borrow later used here

error[E0499]: cannot borrow `files_removed` as mutable more than once at a time
   --> src\modules\privacy.rs:191:40
    |
178 |     let mut remove_file_safe = |path: String| {
    |                                -------------- first mutable borrow occurs here
...
186 |             files_removed += 1;
    |             ------------- first borrow occurs due to use of `files_removed` in closure
...
191 |     let mut remove_dir_contents_safe = |path: &str| {
    |                                        ^^^^^^^^^^^^ second mutable borrow occurs here
...
204 |                             files_removed += 1;
    |                             ------------- second borrow occurs due to use of `files_removed` in closure
...
216 |                 remove_file_safe(format!("{}\\History", chrome_dir));
    |                 ---------------- first borrow later used here

warning: unused variable: `worst`
   --> src\modules\disk.rs:520:21
    |
520 |                 let worst = attr.get("worst").and_then(|v| v.as_i64()).unwrap_or(100);
    |                     ^^^^^ help: if this is intentional, prefix it with an underscore: `_worst`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `stdout`
   --> src\modules\disk.rs:582:9
    |
582 |     let stdout = match output {
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_stdout`

Some errors have detailed explanations: E0499, E0503.
For more information about an error, try `rustc --explain E0499`.
warning: `sabi` (lib) generated 6 warnings
error: could not compile `sabi` (lib) due to 6 previous errors; 6 warnings emitted
